# pdit

./: .gitattributes  .gitignore  AGENTS.md  ARCH.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_COMPARISON.md  INTERRUPT_FINDINGS.md  LICENSE  MANIFEST.in  Makefile  PLAN.md  PYODIDE_FINDINGS.md  Procfile  RADICAL_SIMPLIFICATION.md  README.md  SYNC_PLAN.md  TESTING.md  TINYTODO.md  WEBSOCKET_MIGRATION.md  WEBSOCKET_REVIEW.md  index.html  package-lock.json  package.json  pyproject.toml  sample.py  sample2.py  sample_anywidget.py  test.py  test_browser.py  test_frontend.mjs  test_interrupt.mjs  test_interrupt_messages.mjs  test_interrupt_patience.py  test_interrupt_recovery.py  test_interrupt_survival.py  test_ipython_interrupt.py  test_itables.py  (+10 more)
.beads/: config.yaml  deletions.jsonl  issues.jsonl
.claude/commands/: change-report.md
.github/workflows/: build-dist.yml  summarize_issue.yml
.tick/: config.json
.tick/issues/: juc.json  xc1.json
change-reports/: mime-types-changes.html  xeus-python-migration-changes.html
docs/: PDIT.md  line-group-height-sync-analysis.md  line-group-height-sync-solution.md  result-lifecycle.md  top-level-r-expressions.md
docs/codemirror6/: README.md  api-reference.md  extensions.md  guide.md  migration-v5-to-v6.md
docs/react-and-codemirror/: codemirror-and-react.md  (+2 more)
examples/: 0.6.0.py  anywidget-example.py  class-decorator-example.py  decorator-example.py  demo.py  details-example.py  example.py  fstring-markdown-example.py  html-example.py  image-example.py  itables-example.py  markdown-example.py  matplotlib-example.html  matplotlib-example.py  pandas-example.py  plotnine-example.py  polars-example.html  polars-example.py  simple-demo.py  sleep-example.py  streaming-output.py
fe/: index.html  tsconfig.json  vite.config.export.ts
history/: ANYWIDGET_INTEGRATION.md  ANYWIDGET_INTEGRATION_SUMMARY.md  DATA_FLOW_DIAGRAM.md  FILE_WATCHER_TUTORIAL.md  QUICK_REFERENCE.md  RDIT_ARCHITECTURE_SUMMARY.md  README.md  REFACTORING-SHARED-EXECUTOR.md  TUTORIAL-PLAN-013-PYTHON-BACKEND.md  TWO_WAY_WIDGET_INTERACTION.md
pdit/: __init__.py  _demo.py  cli.py  executor.py  exporter.py  file_watcher.py  ipython_executor.py  kernel.py  markdown_executor.py  python_executor.py  server.py  server_simple.py  session.py  xeus_executor.py
plans/: 002-codemirror-state-sync.md  006-line-group-adjust-spacer-on-line-break.md  007-r-wasm-execution.md  009-execution-history-indicators.md  010-non-destructive-results.md  011-partial-line-group-update.md  012-save-changes.md  013-dataframe-table.md  013-file-watcher.md  013-python-backend.md  014-full-height-editor.md  015-pending-expresions.md  016-anywidget-integration.md  2005-005-line-group-top.md  2025-003-merge-groups.md  2025-004-line-group-interface.md  2025-005-line-group-height.md  2025-005-set-line-group-top.md  2025-007-r-wasm-execution.md  2025-008-execute-current-expression.md  wip-groups-without-results.md
python/: .gitignore  README.md  pyproject.toml  test_backend.py  test_script.py
python/src/rdit/: __init__.py  cli.py  executor.py  server.py
rdit/: __init__.py  cli.py  executor.py  file_watcher.py  server.py  sse.py
scenarios/: kernel_state_machine_scenario.py
src/: ARCHITECTURE.md  App.tsx  CodeMirrorEditor.tsx  DebugPanel.tsx  Editor.tsx  Output.tsx  OutputPane.tsx  Preview.tsx  PreviewPane.tsx  PreviewSpacer.tsx  Spacer.tsx  TopBar.stories.tsx  TopBar.tsx  api.ts  codemirror-debug-panel.ts  compute-line-groups.test.ts  compute-line-groups.ts  execution-backend-pyodide.ts  execution-backend-python.ts  execution-backend.ts  execution-gutter.ts  execution-python.test.ts  execution-python.ts  execution.test.ts  execution.ts  expression-finder.ts  line-group-heights.ts  line-group-layout.ts  line-group-tops.ts  line-heights.ts  main.ts  main.tsx  package-investigation.test.ts  pyodide-instance.ts  python-parser-server.ts  python-parser.ts  range-highlight-plugin.ts  result-grouping-plugin.ts  result-ranges-sync.ts  results.test.ts  (+4 more)
tests/: __init__.py  result-grouping-plugin.test.mjs  test_executor.py  test_file_watcher.py  test_ipython_executor.py  test_local_import.py  test_markdown_executor.py  test_python_executor.py  test_server.py  test_websocket_execution.py  test_xeus_executor.py
todos/: 0001-unify-version-source.md  0002-align-ws-protocol-end-to-end.md  0003-use-nodeindex-as-stable-expression-id.md  0004-make-reset-semantics-truthful.md  0005-avoid-blocking-kernel-ops-in-async-ws-loop.md  remove-python-executor.md
web/: export.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
www/: DESIGN.md  astro.config.mjs  package-lock.json  package.json
(+156 files in other folders)
