[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rdit"
version = "0.1.0"
description = "A modern, reactive notebook for Python, inspired by Observable"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[project.scripts]
rdit = "rdit.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/rdit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
